[package]
edition = "2024"
name = "rpi-embassy-blinky"
version = "0.1.0"
authors = ["kevin"]
resolver = "2"

[[bin]]
name = "rpi-embassy-blinky"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
